--- a/requirements.txt
+++ b/requirements.txt
@@ -53,3 +53,10 @@ xstatic-jsencrypt>=2.0.0.2  # MIT License
 xstatic-qunit>=1.14.0.2  # MIT License
 xstatic-rickshaw>=1.5.0  # BSD License (prior)
 xstatic-spin>=1.2.5.2  # MIT License
+oslo.config==1.9.3
+oslo.context==0.2.0
+oslo.i18n==1.5.0
+oslo.log==3.3.0
+oslo.policy==0.3.1
+oslo.serialization==1.4.0
+oslo.utils==1.4.0
